<resources>
    <string name="app_name">MAD project</string>
    <string name="hello">Hello!</string>
    <string name="display_msg">Find Your Favourite Books with Us</string>
    <string name="new_arr_text">New Arrivals</string>
    <string name="contrast_ration">3</string>
    <string name="activitybook_desc">"Spot The Difference  :   Fun Activity Books for Kids "</string>
    <string name="shadybaby_descp">"Inspired by fan favourite Author, Kaavia James "</string>
    <string name="homelogo">logo</string>
    <string name="actbook">activity_book</string>
    <string name="shaddybookdesc">shaddybook</string>
    <string name="contrantration">3</string>
    <string name="cart_heading">Your Cart</string>
    <string name="cart_item_descrip">Price: Rs.400/=</string>
    <string name="item1qty">Qty.</string>
    <string name="sub_total">Sub Total</string>
    <string name="subtot_hint">Rs.xxx.xx </string>
    <string name="addoffers_title" />
    <string name="add_offers_heading">Add Offer Items</string>
    <string name="offers_heading">Special Offers</string>
    <string name="offer_bookname">Book name</string>
    <string name="bookcode">ISBN</string>
    <string name="offerprice">Offer price</string>
    <string name="offer_descript">Offer description</string>
    <string name="offer_code">ISBN</string>
    <string name="addoffers_heading">Add Offer Item</string>
    <string name="editoffers_heading">Edit Offers</string>
    <string name="tv_offermicky">2 Micky Mouse Colouring Books</string>
    <string name="harrypotter_offer">Harry Potter Book Series</string>
    <string name="edit_offers" />
    <string name="orderdetail_heading">Order Details</string>
    <string name="date">Order For</string>
    <string name="dateorder">xx/xx/xxxx</string>
    <string name="namebuyer">Full Name</string>
    <string name="phoneNo">Phone NO.</string>
    <string name="emailbuyer">Email</string>
    <string name="fullname"></string>
    <string name="phone">phone number</string>
    <string name="buyeremail" />
    <string name="cartitem2">Price: Rs.700</string>
    <string name="subtot">Rs.xxx.xx</string>
    <string name="title_activity_more_dreawer">more_dreawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="iconuser">TODO</string>
    <string name="offer_despt_tv">Until 30th</string>
    <string name="isbn">ISBN :</string>
    <string name="isbn_offer_tv">1234</string>
    <string name="booktitle_offer_tv">Oliver Twist</string>
    <string name="offer_price_tv">RS.500</string>
    <string name="tv_delivery">Delivery Address</string>
    <string name="tv_d_message">Please make sure the delivery address is correct</string>
    <string name="et_dno">Please Enter NIC number</string>
    <string name="et_building_name">Business or Building Name</string>
    <string name="et_street">Street</string>
    <string name="et_district">District</string>
    <string name="btn_d_continue">Continue</string>
    <string name="btn_d_show">Show</string>
    <string name="btn_d_update">Update</string>
    <string name="tv_pay">Payment</string>
    <string name="tv_subtotal">Sub Total</string>
    <string name="tv_subtotal2">Postage Fee</string>
    <string name="tv_total3">Total</string>
    <string name="tv_p_method">Choose Payment Method</string>
    <string name="et_display_subtotal">0.00</string>
    <string name="et_display_postage">0.00</string>
    <string name="et_display_payment_Tot">0.00</string>
    <string name="tv_bank">Bank Deposit</string>
    <string name="et_bank_name">Your name</string>
    <string name="et_bank_phone">Phone number</string>
    <string name="tv_bank_slip">Upload Slip*</string>
    <string name="btn_deposit_cancel">Cancel</string>
    <string name="btn_deposit_pay">Confirm</string>
    <string name="tv_card_details">Card Details</string>
    <string name="tv_card_type">Card Type *</string>
    <string name="et_card_no">Card Number</string>
    <string name="et_ex_date">Expiration date</string>
    <string name="tv_card_cvn">CVN*</string>
    <string name="tv_card_cvn_message">This code is a three or four digit number printed on the back or front of credit card</string>
    <string name="et_cvn">Enter CVN</string>
    <string name="btn_card_cancel">Cancel</string>
    <string name="btn_card_confirm">Confirm</string>
    <string name="rbtn_card_payment">Card Payment</string>
    <string name="rbtn_bank_deposit">Bank Deposit</string>
    <string name="rbtn_visa_card">Visa Card</string>
    <string name="rbtn_master_card">Mastercard</string>
    <string name="btn_bank_cam">Take Photo</string>
    <string name="btn_payment_next">NEXT</string>
    <string name="btn_d_delete">Delete</string>
    <string name="btn_d_change">Change</string>
    <string name="btn_card_show">Home</string>
    <string name="et_card_nic">"Enter Nic "</string>
    <string name="btn_sidebar_Freestory" > Free Positve Story </string>
    <string name="edit_text">edit text</string>
    <string name="password">password</string>
    <string name="signin" />
    <string name="account">don\'t have an account</string>
    <string name="username">name</string>
    <string name="email">email address</string>
    <string name="signup">signup</string>
    <string name="have">already have account</string>
    <string name="profile">profile icon</string>
    <string name="shopping">"shopping cart "</string>
    <string name="menu">more options</string>
    <string name="image">image</string>
    <string name="rating">rating bar</string>
    <string name="feedback">"feedback "</string>
    <string name="submit">submit</string>
    <string name="book">name of the book</string>
    <string name="author">author\'s name</string>
    <string name="update">update book details</string>
    <string name="delete">delete request</string>
    <string name="view">view list</string>
    <string name="img">mainrainbow</string>
    <string name="signIn">sign in</string>
    <string name="CreateData">CreateData</string>
    <string name="CreateRequest">CreateRequest</string>
    <string name="RegisterUser">registerUser</string>
    <string-array name="title_story">
        <item>The beauty of Learning </item>
        <item>Your Smile is the Sun </item>
        <item>The Power of Dreams </item>
        <item>Bonnie Blair on Sportsmanship </item>
        <item>You Better Than You Do </item>
        <item>Jim Rohan Encourages Challenges </item>
        <item>The Ripple Effect </item>
        <item>Do the Right Thing </item>
        <item>Getting Things Done </item>
        <item>The Value of Mistakes </item>
        <item>Being Uncommon </item>
        <item>You Have the Power </item>
        <item>Positively Positive About Positivity </item>
        <item>Mahatma Gandhi Encourages Change </item>
        <item>Keeps It Simple </item>

    </string-array>
</resources>