<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity_login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="500sp"
        android:layout_height="296dp"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="32sp"
        android:contentDescription="@null"
        android:src="@drawable/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLoginName"
        android:layout_width="350sp"
        android:layout_height="45sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#e692f8"
        android:textColorHint="@color/F6BBFA"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/etLoginPwd"
        android:layout_width="350sp"
        android:layout_height="45sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="7sp"
        android:layout_marginRight="20sp"
        android:hint="@string/password"
        android:textColorHint="@color/F6BBFA"
        android:inputType="textPassword"
        android:textColor="#e692f8"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText"
        tools:text="password" />


    <Button
        android:id="@+id/login"
        android:layout_width="350sp"
        android:layout_height="50sp"
        android:layout_marginTop="30sp"
        android:background="@color/e692f8"
        android:hint="@string/signin"
        android:text='Log in'
        android:textColor="#fff"
        android:textSize="16sp"


        android:textStyle="bold"
        app:backgroundTint="@color/e692f8"
        app:iconTint="@color/e692f8"
        app:rippleColor="@color/e692f8"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:hint="@string/account"
        android:text="Don't have an account? "
        android:textColor="#e692f8"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="0sp"
        android:translationY="15sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn_2signup"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationY="5sp"
        app:backgroundTint="@color/e692f8" />


</LinearLayout>