<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardPayment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:background="#F6BBFA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_box_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="77dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="46dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_dehaze_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/tv_card_details"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_card_details"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_card_no"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/et_card_no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_card_nic"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_card_type"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_card_type"
        android:textColor="#C171CF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_details"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="399dp">

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_card_cvn_message"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_card_cvn_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cvn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_card_show"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="#F6BBFA"
        android:text="@string/btn_card_show"
        android:textColor="@color/black"
        app:backgroundTint="#F6BBFA"
        app:layout_constraintEnd_toStartOf="@+id/btn_card_confirm"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_cvn_message"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_card_confirm"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_marginEnd="44dp"
        android:background="#F6BBFA"
        android:text="@string/btn_card_confirm"
        android:textColor="@color/black"
        app:backgroundTint="#E91E63"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_card_show"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_cvn"
        android:layout_width="268dp"
        android:layout_height="62dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/et_cvn"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_card_cvn"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_type"
        app:srcCompat="@drawable/visa"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="74dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/master"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="187dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_type">

        <RadioButton
            android:id="@+id/rbtn_visa_card"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/rbtn_visa_card"
            app:buttonTint="#E91E63" />

        <RadioButton
            android:id="@+id/rbtn_master_card"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/rbtn_master_card"
            app:buttonTint="#E91E63" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_card_nic"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/et_card_nic"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv_card_cvn"
        android:layout_width="77dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_card_cvn"
        android:textColor="#C171CF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/et_cvn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_card_no" />


</androidx.constraintlayout.widget.ConstraintLayout>