<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2_feedback">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/F6BBFA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="56dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="332dp"
        android:layout_marginRight="332dp"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/shopping_cart" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="46dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/app_name"
        app:constraint_referenced_tags="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/table_rows_24"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/textView2"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:scrollbarStyle="outsideInset"
        android:text="Tell us what you think"
        android:textColor="@color/color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="372dp"
        android:layout_height="110dp"
        android:layout_marginTop="46dp"
        android:autofillHints="@android:string/unknownName"
        android:ems="10"
        android:hint="tell_us_What_you_think"
        android:inputType="textPersonName"
        android:text=" "


        android:textColor="@color/F6BBFA"
        android:textSize="34sp"
        app:constraint_referenced_tags="@string/feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        tools:ignore="HardcodedText,MissingPrefix" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="376dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/color"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@color/color"
        app:constraint_referenced_tags="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMessage"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="HardcodedText,MissingPrefix" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="266dp"
        android:layout_height="163dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/app_name"
        app:constraint_referenced_tags="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/img2"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/btnViewFB"
        android:layout_width="369dp"
        android:layout_height="53dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="27dp"
        android:text="View Feeedbacks"
        android:textColor="@color/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>